// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect.js should add color to selected index 1`] = `
<div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-select--is-multi">
  <div class="v-input__control">
    <div role="button"
         aria-haspopup="listbox"
         aria-expanded="false"
         aria-owns="list-49"
         class="v-input__slot"
    >
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma primary--text">
            foo
          </div>
          <input id="input-49"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
                 autocomplete="off"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <span aria-hidden="true"
                  class="v-icon notranslate theme--light"
            >
              <svg xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 24 24"
                   role="img"
                   aria-hidden="true"
                   class="v-icon__svg"
              >
                <path d="M7,10L12,15L17,10H7Z">
                </path>
              </svg>
            </span>
          </div>
        </div>
        <input type="hidden"
               value="foo"
        >
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <transition-group-stub tag="div"
                               name="message-transition"
                               class="v-messages__wrapper"
        >
        </transition-group-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`VSelect.js should open the select is multiple and key down is pressed 1`] = `
<div
  data-app="true"
>
  <div
    class="v-menu__content theme--light menuable__content__active "
    style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;"
  >
    <div
      class="v-list v-select-list v-sheet theme--light theme--light"
      id="list-102"
      role="listbox"
      tabindex="-1"
    >
      <div
        aria-selected="false"
        class="v-list-item v-list-item--link theme--light"
        id="list-item-108-0"
        role="option"
        tabindex="0"
      >
        <div
          class="v-list-item__action"
        >
          <div
            class="v-simple-checkbox"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <span
                aria-hidden="true"
                class="v-icon notranslate theme--light"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon__svg"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,3H5C3.89,3 3,3.89 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            foo
          </div>
        </div>
      </div>
      <div
        aria-selected="false"
        class="v-list-item v-list-item--link theme--light"
        id="list-item-108-1"
        role="option"
        tabindex="0"
      >
        <div
          class="v-list-item__action"
        >
          <div
            class="v-simple-checkbox"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <span
                aria-hidden="true"
                class="v-icon notranslate theme--light"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon__svg"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,3H5C3.89,3 3,3.89 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            bar
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VSelect.js should open the select is multiple and key up is pressed 1`] = `
<div
  data-app="true"
>
  <div
    class="v-menu__content theme--light menuable__content__active "
    style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;"
  >
    <div
      class="v-list v-select-list v-sheet theme--light theme--light"
      id="list-89"
      role="listbox"
      tabindex="-1"
    >
      <div
        aria-selected="false"
        class="v-list-item v-list-item--link theme--light"
        id="list-item-95-0"
        role="option"
        tabindex="0"
      >
        <div
          class="v-list-item__action"
        >
          <div
            class="v-simple-checkbox"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <span
                aria-hidden="true"
                class="v-icon notranslate theme--light"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon__svg"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,3H5C3.89,3 3,3.89 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            foo
          </div>
        </div>
      </div>
      <div
        aria-selected="false"
        class="v-list-item v-list-item--link theme--light"
        id="list-item-95-1"
        role="option"
        tabindex="0"
      >
        <div
          class="v-list-item__action"
        >
          <div
            class="v-simple-checkbox"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <span
                aria-hidden="true"
                class="v-icon notranslate theme--light"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon__svg"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,3H5C3.89,3 3,3.89 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            bar
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VSelect.js should open the select when enter is pressed 1`] = `
<div
  data-app="true"
>
  <div
    class="v-menu__content theme--light menuable__content__active "
    style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;"
  >
    <div
      class="v-list v-select-list v-sheet theme--light theme--light"
      id="list-67"
      role="listbox"
      tabindex="-1"
    >
      <div
        aria-selected="false"
        class="v-list-item v-list-item--link theme--light"
        id="list-item-73-0"
        role="option"
        tabindex="0"
      >
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            foo
          </div>
        </div>
      </div>
      <div
        aria-selected="false"
        class="v-list-item v-list-item--link theme--light"
        id="list-item-73-1"
        role="option"
        tabindex="0"
      >
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            bar
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VSelect.js should open the select when space is pressed 1`] = `
<div
  data-app="true"
>
  <div
    class="v-menu__content theme--light menuable__content__active "
    style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;"
  >
    <div
      class="v-list v-select-list v-sheet theme--light theme--light"
      id="list-78"
      role="listbox"
      tabindex="-1"
    >
      <div
        aria-selected="false"
        class="v-list-item v-list-item--link theme--light"
        id="list-item-84-0"
        role="option"
        tabindex="0"
      >
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            foo
          </div>
        </div>
      </div>
      <div
        aria-selected="false"
        class="v-list-item v-list-item--link theme--light"
        id="list-item-84-1"
        role="option"
        tabindex="0"
      >
        <div
          class="v-list-item__content"
        >
          <div
            class="v-list-item__title"
          >
            bar
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
